[package]
name = "ns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
cursive = { version = "0.21", default-features = false, features = ["crossterm-backend"] }
netstat2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29"
